js/js.translator/testData/incremental/invalidation/nonInlineBecomeInlineWithCrossModuleInliner/lib1/l1.2.kt
inline fun foo() = 77
